<resources>
    <string name="app_name">UserInterface</string>
    <string name="action_settings">Settings</string>
    <!--ImageButton名称-->
    <string name="ib_earth">Earth Button</string>
    <string name="ib_venus">Venus Button</string>
    <string name="ib_jupiter">Jupiter Button</string>
    <string name="ib_neptune">Neptune Button</string>
    <!--星球信息之 earth-->
    <string name="planet_name_earth">Planet Name: Earth</string>
    <string name="planet_mess_earth">Planet Mess: 5973 Yg</string>
    <string name="planet_grav_earth">Planet Gravity: 9.8 m/s</string>
    <string name="planet_size_earth">Planet Diameter: 12,756 KM</string>
    <!--星球信息之 venus-->
    <string name="planet_name_venus">Planet Name: Venus</string>
    <string name="planet_mess_venus">Planet Mess: 4870 Yg</string>
    <string name="planet_grav_venus">Planet Gravity: 8.9 m/s</string>
    <string name="planet_size_venus">Planet Diameter: 12,104 KM</string>
    <!--星球信息之 jupiter-->
    <string name="planet_name_jupiter">Planet Name: Jupiter</string>
    <string name="planet_mess_jupiter">Planet Mess: 1898000 Yg</string>
    <string name="planet_grav_jupiter">Planet Gravity: 23.1 m/s</string>
    <string name="planet_size_jupiter">Planet Diameter: 132,984 KM</string>
    <!--星球信息之 neptune-->
    <string name="planet_name_neptune">Planet Name: Neptune</string>
    <string name="planet_grav_neptune">Planet Gravity: 11.0 m/s</string>
    <string name="planet_mess_neptune">Planet Mess: 10200 Yg</string>
    <string name="planet_size_neptune">Planet Diameter: 49,528 KM</string>

    <!--布局名称-->
    <string name="relative_layout">Relative</string>
    <string name="grid_layout">Grid</string>
    <string name="linear_layout">LinearLayout</string>
</resources>
