<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--earth-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_earth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/ib_earth"
            android:src="@drawable/ib_states_earth" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_name_earth"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2_earth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_mess_earth"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv3_earth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_grav_earth"
                android:textSize="14sp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_venus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/ib_venus"
            android:src="@drawable/ib_states_venus" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_name_venus"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2_venus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_mess_venus"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv3_venus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_grav_venus"
                android:textSize="14sp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_jupiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/ib_jupiter"
            android:src="@drawable/ib_states_jupiter" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_name_jupiter"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2_jupiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_mess_jupiter"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv3_jupiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planet_grav_jupiter"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>